crates/diffguard/tests/snapshots/baseline_mode_snapshots__baseline_mode_empty_baseline_all_new.snap
---
source: crates/diffguard/tests/baseline_mode_snapshots.rs
expression: "format!(\"exit_code={:?}\\n\\n{}\", exit_code, markdown)"
---
exit_code=Some(2)

## diffguard — FAIL

Scanned **1** file(s), **1** line(s) (scope: `added`, base: `GIT_HASH_PLACEHOLDER`, head: `GIT_HASH_PLACEHOLDER`)

| Severity | Classification | Rule | Location | Message | Snippet |
|---|---|---|---|---|---|
| error | [NEW] `rust.no_unwrap` | `src/lib.rs:2` | Avoid unwrap/expect in production code. | `pub fn g() -> u32 { Some(1).unwrap() }` |
