crates/diffguard/tests/snapshots/baseline_mode_snapshots__baseline_mode_mixed_findings.snap
---
source: crates/diffguard/tests/baseline_mode_snapshots.rs
expression: "format!(\"exit_code={:?}\\n\\n{}\", exit_code, normalize_git_hashes(&markdown))"
---
exit_code=Some(0)

## diffguard — FAIL

Scanned **1** file(s), **1** line(s) (scope: `added`, base: `GIT_HASH_PLACEHOLDER`, head: `GIT_HASH_PLACEHOLDER`)

| Severity | Classification | Rule | Location | Message | Snippet |
|---|---|---|---|---|---|
| error | [BASELINE] `rust.no\_unwrap` | `src/lib.rs:2` | Avoid unwrap/expect in production code. | `.unwrap(` |
